[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19"
stylist = { version = "0.10", features = ["yew", "yew_use_style"] }
yew-vdom-gen = "0.1"
derive_more = { version = "0.99" }
wasm-logger = "0.2.0"
log = "0.4"
web-sys = { version = "0.3", features = [
    "HtmlSelectElement"
    ,
    "HtmlInputElement",
    "HtmlButtonElement",
    "HtmlDivElement",
    "Element",
    "DomRect",
    "HtmlHeadingElement",
    "CssStyleDeclaration",
    "Window"
] }
bounce = "0.2"
gloo-utils = "0.1"
serde = "1.0"
bincode = "2.0.0-rc.1"
yewdux = "0.7"
yewdux-functional = "0.1.0"
gloo-dialogs = "0.1"
yew-router = "0.16"
reqwasm = "0.5"
futures = "0.3"
gloo-timers = "0.2"
gloo-console = "0.2"
wasm-bindgen-futures = "0.4"
#common = {path = "../common"}
#tokio = {version = "1.17", features = ["sync"]}
#instant = { version = "0.1" , features = ["wasm-bindgen"]}
#yew-interop = "0.3"
wasm-bindgen = "0.2"
js-sys = "0.3"
time = { version = "0.3", features = ["macros"] }
chinese-number = "0.6.4"
yew-hooks = "0.1"
