[package]
name = "jiggle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
yew = "0.19"
gloo-dialogs = "0.1.1"
gloo-console = "0.2"
wasm-bindgen-futures = "0.4"
gloo-timers = { version = "0.2", features = ["futures"] }
js-sys = "0.3"


[dependencies.web-sys]
version = "0.3"
features = ["HtmlInputElement", "HtmlAudioElement", "HtmlMediaElement"]

